--- a/smaans.html
+++ b/smaans.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Content Analysis</title>
+</head>
+<body>
 ######### content analysis ##################
 
 ## Topic Modeling
@@ -486,3 +494,6 @@ plt.show()
 
 
 
+   
+</body>
+</html>
