--- a/smaans.html
+++ b/smaans.html
@@ -6,6 +6,8 @@
     <title>Content Analysis</title>
 </head>
 <body>
+<pre>
+
 ######### content analysis ##################
 
 ## Topic Modeling
@@ -492,8 +494,7 @@ plt.show()
     for nodes in influential_nodes:
         print(f'{nodes[0]} : {nodes[1]}')
 
-
-
+</pre>
    
 </body>
 </html>
